@@ -170,12 +170,6 @@ set armelftests {
      {"jump19" "-static -T arm.ld" "" {jump19.s}
       {{objdump -dr jump19.d}}
       "jump19"}
-     {"EABI attribute merging" "-r" "" {attr-merge.s attr-merge.s}
-      {{readelf -A attr-merge.attr}}
-      "attr-merge"}
-     {"EABI attribute merging 2" "-r" "" {attr-merge-2a.s attr-merge-2b.s}
-      {{readelf -A attr-merge-2.attr}}
-      "attr-merge-2"}
      {"callweak" "-static -T arm.ld" "" {callweak.s}
       {{objdump -dr callweak.d}}
       "callweak"}
@@ -197,9 +191,15 @@ if { ![istarget "arm*-*-*eabi"] } {
 }
 
 set armeabitests {
-    {"Thumb-2 BL" "-Ttext 0x1000 --section-start .foo=0x1001000" "" {thumb2-bl.s}
-     {{objdump -dr thumb2-bl.d}}
-     "thumb2-bl"}
+     {"EABI attribute merging" "-r" "" {attr-merge.s attr-merge.s}
+      {{readelf -A attr-merge.attr}}
+      "attr-merge"}
+     {"EABI attribute merging 2" "-r" "" {attr-merge-2a.s attr-merge-2b.s}
+      {{readelf -A attr-merge-2.attr}}
+      "attr-merge-2"}
+     {"Thumb-2 BL" "-Ttext 0x1000 --section-start .foo=0x1001000" "" {thumb2-bl.s}
+      {{objdump -dr thumb2-bl.d}}
+      "thumb2-bl"}
 }
 
 run_ld_link_tests $armeabitests
